Fixed the text overflow

--- a/src/styles/channel.module.scss
+++ b/src/styles/channel.module.scss
@@ -7,19 +7,17 @@
 .channel {
 	user-select: none;
 	transition: transform 100ms ease-in-out;
-	overflow: hidden;
 	img {
 		border-radius: 15px;
 		margin: 10px;
 		float: left;
 	}
 	.channelInfo {
-		float: left;
-		margin-left: 10px;
 		text-align: center;
+		margin-left: 100px;
 		max-width: 425px;
 		font-size: 30px;
-		font-size: 1.8vw;
+		font-size: 2vw;
 	}
 	border-radius: 15px;
 	max-width: 90vw;
