--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -63,7 +63,7 @@
 	min-height: 30px;
 	position: fixed;
 	top: 5px;
-	right: 40px;
+	left: 40px;
 	background-color: #3b56b8;
 	border-radius: 5px;
 	border: 5px #000;
@@ -92,7 +92,7 @@
 	min-height: 30px;
 	position: fixed;
 	top: 5px;
-	right: 5px;
+	left: 5px;
 	color: white;
 	background-color: #3b56b8;
 	border-radius: 5px;
